@@ -215,9 +215,11 @@
                   <li>
                     <p tal:content="structure context/get_citation_string"></p>
                     <dl>
-                      <dt i18n:translate="url">URL:</dt>
-                      <dd><a tal:attributes="href context/absolute_url"
-                             tal:content="context/absolute_url"></a></dd>
+                      <tal:absolute_url condition="view/is_url_shown_in_citation_note">
+                        <dt i18n:translate="url">URL:</dt>
+                        <dd><a tal:attributes="href context/absolute_url"
+                                tal:content="context/absolute_url"></a></dd>
+                      </tal:absolute_url>
                       <tal:canonical_uri define="url context/canonical_uri | nothing"
                                          condition="url">
                         <dt i18n:translate="heading_first_published">First published:</dt>
